# dta-vs-osc

./: Dockerfile  LICENSE  README.md
attacking_anti_tamper/: run.py
attacking_anti_tamper/evaluation/: attack_virtsc_version.sh  build_virtsc_version.sh  compare_size.py  compare_time.py  compile_dataset.sh  create_all_binaries.sh  generate_attack_figure_skipped.py  generate_attack_figure_time.py  print_latex_table.py  print_overhead_list_size.py  print_overhead_list_time.py  print_value_lists.py  protect.sh  time_execution.py
attacking_anti_tamper/evaluation/VirtSC_New/: ISATranslator.cpp
attacking_anti_tamper/evaluation/VirtSC_New_Dummy_Check/: ScVirt.cpp
attacking_anti_tamper/evaluation/VirtSC_New_Tampered/: ScVirt.cpp
attacking_anti_tamper/evaluation/VirtSC_Old/: ScVirt.cpp
attacking_anti_tamper/evaluation/VirtSC_Old_Dummy_Check/: ScVirt.cpp
attacking_anti_tamper/evaluation/VirtSC_Old_Tampered/: ISATranslator.cpp  ScVirt.cpp
attacking_anti_tamper/evaluation/binaries_new/: 2048.out  basicmath_large.out  basicmath_small.out  bf.out  bitcnts.out  crc.out  dijkstra_large.out  dijkstra_small.out  fft.out  patricia.out  qsort_large.out  qsort_small.out  rawcaudio.out  rawdaudio.out  say.out  search_large.out  search_small.out  sha.out  snake.out  susan.out  tetris.out  toast.out
attacking_anti_tamper/evaluation/binaries_new_dummy_check/: 2048.out  basicmath_large.out  basicmath_small.out  bf.out  bitcnts.out  crc.out  dijkstra_large.out  dijkstra_small.out  fft.out  patricia.out  qsort_large.out  qsort_small.out  rawcaudio.out  rawdaudio.out  say.out  search_large.out  search_small.out  sha.out  snake.out  susan.out  tetris.out  toast.out
attacking_anti_tamper/evaluation/binaries_new_tampered/: 2048.out  basicmath_large.out  basicmath_small.out  bf.out  bitcnts.out  crc.out  dijkstra_large.out  dijkstra_small.out  fft.out  patricia.out  qsort_large.out  qsort_small.out  rawcaudio.out  rawdaudio.out  say.out  search_large.out  search_small.out  sha.out  snake.out  susan.out  tetris.out  toast.out
attacking_anti_tamper/evaluation/binaries_old/: 2048.out  basicmath_large.out  basicmath_small.out  bf.out  bitcnts.out  crc.out  dijkstra_large.out  dijkstra_small.out  fft.out  patricia.out  qsort_large.out  qsort_small.out  rawcaudio.out  rawdaudio.out  say.out  search_large.out  search_small.out  sha.out  snake.out  susan.out  tetris.out  toast.out
attacking_anti_tamper/taint_cpp/: CMakeLists.txt  build.sh
attacking_anti_tamper/taint_cpp/cmake/: ClangRuntimeSupport.cmake
attacking_anti_tamper/taint_cpp/include/taint/: analysis.h  cmdline.h  serialization.h  utils.h
attacking_anti_tamper/taint_cpp/src/: CMakeLists.txt  analysis.cpp  app.cpp  cmdline.cpp  serialization.cpp  utils.cpp
attacking_anti_tamper/tracer/: CMakeLists.txt  build.bat  build.sh  instrace_x86.cpp  run.bat.in  run.sh.in  run_manual.sh.in  utils.h
sc-virt/: README.md
sc-virt/src/: .clang-tidy  .gitignore
(+124 files in other folders)
